Fix overlapping components when scrolling

--- a/recipes_app/src/styling/Navbar.css
+++ b/recipes_app/src/styling/Navbar.css
@@ -11,6 +11,7 @@
     align-items: center;
     grid-template-columns: 1fr 2fr;
     flex-wrap: wrap;
+    z-index: 1000;
 }
 
 .left-content {
